syntax = "proto3";

package package.name;

service ServiceName {
    rpc MethodName (MessageName) returns (MessageName);
}

message MessageName {
    int32 test = 1;
}